added search option, added homepage, fixed content and added tagging

--- a/search.html
+++ b/search.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Stefan li Rous Memorial Florilegium</title>
+  <title>Search Results - Stefan li Rous Memorial Florilegium</title>
   <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
@@ -19,19 +19,11 @@
         </div>
     </div>
     <main style="flex:1; padding:20px;">
+        <h2>Search Results</h2>
         <div id="contentArea">
-            <h2>Welcome</h2>
-            <p>This Florilegium contains various articles and files curated for study.</p>
-            <h3>How it works:</h3>
-            <ul>
-                <li>Browse categories using the sidebar.</li>
-                <li>Search by tags or titles in the sidebar search box.</li>
-                <li>Click on a tag to view all items with that tag.</li>
-                <li>Download files using the download button on each card.</li>
-            </ul>
-            <h3>Submit an article:</h3>
-            <p>To submit an article, please email your text submission directly to example@email.com. Include your name and any relevant affiliation.</p>
+            <!-- JS will populate search results and highlight matches -->
         </div>
+        <button onclick="window.location.href='articles.html'">Clear Search</button>
     </main>
 </div>
 
