--- a/search.html
+++ b/search.html
@@ -13,11 +13,11 @@
 <div style="display:flex;">
     <div id="sidebar" style="width:200px; padding:10px;">
         <input type="text" placeholder="Search..." id="sidebarSearch"><br><br>
-        <div id="categoryList">
-            <p>Category 1</p>
-            <p>Category 2</p>
-        </div>
-    </div>
+        <p>
+          <a href="index.html" style="text-decoration: none; color: #3a2a1a"
+            >🏠 Home</a
+          >
+        </p>
     <main style="flex:1; padding:20px;">
         <h2>Search Results</h2>
         <div id="contentArea">
