added all categories, trillium icon

--- a/about-stefan.html
+++ b/about-stefan.html
@@ -7,12 +7,11 @@
     <link href="css/style.css" rel="stylesheet" />
   </head>
   <body>
-    <header style="display:flex; align-items:center; justify-content:flex-start; padding:10px;">
+       <header style="display:flex; align-items:center; justify-content:flex-start; padding:10px;">
   <span style="display:flex; align-items:center;">
     <img src="img/Trillium_flower.svg.png" alt="Icon" style="width:50px; height:50px;">
     <span style="margin-left:550px;">Stefan li Rous Memorial Florilegium</span>
   </span>
-</header>
       <button id="modeToggle" style="float: right; margin-right: 10px">
         🌙
       </button>
@@ -21,8 +20,8 @@
     <div style="display: flex">
      <div id="sidebar" style="width:200px; padding:10px;">
     <input type="text" placeholder="Search..." id="sidebarSearch"><br>
-<p><a href="#" style="text-decoration:none; color:#3a2a1a;">🏠 Home</a></p>
-<p><a href="about-stefan.html">About THL Stefan li Rous</a></p>
+<p><a href="index.html" style="text-decoration:none; color:#3a2a1a;">🏠 Home</a></p>
+<p><a href="#">About THL Stefan li Rous</a></p>
     <div id="categoryList">
         <p><a href="category-12th-century.html">12th Century</a></p>
         <p><a href="category-accessories.html">Accessories</a></p>
@@ -93,30 +92,32 @@
     </div>
 </div>
 
-      <main style="flex: 1; padding: 20px">
+      <main style="flex: 1; padding: 30px">
         <div id="contentArea">
-          <h2>Welcome</h2>
+          <h2>The Honorable Lord Stefan li Rous</h2>
+          <subtitle>Pulled from his <a href="https://web.archive.org/web/20240816014607/https://www.joincake.com/memorial-pages/mark-harris/#obituary">Obituary</a></subtitle>
           <p>
-            This Florilegium was meticulously assembled by The Honorable Lord Stefan li
-            Rous (Mark S. Harris)who passed away before I ever had the chance to
-            discover it. After learning about his work, I felt inspired to carry
-            it forward — honouring his vision by maintaining and curating the
-            original articles, while also contributing new ones to continue and
-            expand his legacy.
+            Mark Stephen Harris was born in Dallas, Texas, on August 26, 1957. He left this world on Friday, June 10, 2022, at the age of 64 from North Austin Medical Center. 
+            We miss him.
           </p>
+          <p>
+Mark grew up with his two younger brothers, Jon and David. As a boy, he was active in the Boy Scouts of America, achieving the rank of Eagle Scout. He graduated from W.T. White High School in 1975 where he had been a member of the National Honor Society. The smart cookie that he was, he went on to earn degrees in Electrical and Computer Engineering at the University of Texas at Austin. After graduation, he worked as a computer engineer for Motorola and Freescale for over 25 years.
+</p>
+<p>
+One of Mark’s passions was his membership in the local barony of the Society for Creative Anachronism (SCA). Interesting, right? that someone so knowledgeable about modern computers loved learning and practicing the technology of medieval times. Mark collected and tried different recipes from ye olden days, seeking to use authentic ingredients and methods. He made his own chain mail and participated in medieval combat, including jousting tournaments.
+</p>
+<p>
+Mark, a.k.a. Stefan Li Rous, met his wife, Alice Morrow, a.k.a. Alina Mitchell, through the SCA. They were married at the Commons Ford Park Ranch House on May 1, 1993, in a beautiful outdoor ceremony, full of flowers, bright colors, and love. During their marriage, they traveled across the country several times to SCA “wars,” which were huge meet-ups with other SCA groups where they could share knowledge through demonstrations and classes, compete in sporting events, and live the medieval life in a big campground for a few days.  
+</p>
+<p>
+Mark loved animals, too, and had several cats and dogs over the years. Two of his favorite dogs, Snowball and Caspar, marched in many a Fourth of July parade and SCA event, pulling a small medieval-style cart.
+</p>
+<p>
+Mark was fairly adventurous about food, although he couldn’t remember a green vegetable that he liked. He was also a good sport when the family met at noisy, crowded local Mexican restaurants to celebrate Father’s Day and birthdays. Mark was kind and generous. 
+</p>
+<a href="https://photos.google.com/share/AF1QipPVGfQhqJLNstIzJ9dAu-FcNqxiewi5jDWTRvuhwKdU_TcsZJN-T2GxIXj3B059ag?key=NkQ3MTVMNHBwRjZLejRIWmhfQ2thc2hMclc2WGdn"target="_blank" rel="noopener noreferrer">Photos</a>
         </br>
-          <h3>How it works</h3>
-          <ul>
-            <li>Browse categories using the sidebar.</li>
-            <li>Search by tags or titles in the sidebar search box.</li>
-            <li>Click on a tag to view all items with that tag.</li>
-            <li>Download files using the download button on each card.</li>
-          </ul>
-          <h3>Submit an article</h3>
-          <p>
-            To submit an article, please <a href="mailto:ren.swiftwater@gmail.com">email your text submission directly</a>, either in doc/docx or pdf format. Include your name and any SCA kingdom or baronial affiliation.
-          </p>
-               </div>
+     
       </main>
     </div>
   </body>
