--- a/articles.html
+++ b/articles.html
@@ -7,12 +7,16 @@
     <link href="css/style.css" rel="stylesheet" />
   </head>
   <body>
-    <header>
-      Stefan li Rous Memorial Florilegium
+       <header style="display:flex; align-items:center; justify-content:flex-start; padding:10px;">
+  <span style="display:flex; align-items:center;">
+    <img src="img/Trillium_flower.svg.png" alt="Icon" style="width:50px; height:50px;">
+    <span style="margin-left:550px;">Stefan li Rous Memorial Florilegium</span>
+  </span>
       <button id="modeToggle" style="float: right; margin-right: 10px">
         🌙
       </button>
     </header>
+
 
     <div style="display: flex">
       <div id="sidebar" style="width: 200px; padding: 10px">
