--- a/category-personal-care.html
+++ b/category-personal-care.html
@@ -12,11 +12,10 @@
     <img src="img/Trillium_flower.svg.png" alt="Icon" style="width:50px; height:50px;">
     <span style="margin-left:550px;">Stefan li Rous Memorial Florilegium</span>
   </span>
-      <button id="modeToggle" style="float: right; margin-right: 10px">
+      <button id="modeToggle" style="float: right; margin-left: 600px;">
         🌙
       </button>
     </header>
-
     <div style="display: flex">
      <div id="sidebar" style="width:200px; padding:10px;">
     <input type="text" placeholder="Search..." id="sidebarSearch"><br>
