--- a/category-textile-arts.html
+++ b/category-textile-arts.html
@@ -12,7 +12,7 @@
     <img src="img/Trillium_flower.svg.png" alt="Icon" style="width:50px; height:50px;">
     <span style="margin-left:550px;">Stefan li Rous Memorial Florilegium</span>
   </span>
-      <button id="modeToggle" style="float: right; margin-right: 10px">
+      <button id="modeToggle" style="float: right; margin-left: 600px;">
         🌙
       </button>
     </header>
