added file prefix information

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Stefan li Rous Memorial Florilegium</title>
+    <link
+  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+  rel="stylesheet"
+  integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+  crossorigin="anonymous"
+/>
     <link href="css/style.css" rel="stylesheet" />
   </head>
   <body>
@@ -12,7 +18,7 @@
     <img src="img/Trillium_flower.svg.png" alt="Icon" style="width:50px; height:50px;">
     <span style="margin-left:550px;">Stefan li Rous Memorial Florilegium</span>
   </span>
-      <button id="modeToggle" style="float: right; margin-left: 600px;">
+      <button id="modeToggle" style="float: right; margin-left: 550px;">
         🌙
       </button>
     </header>
@@ -107,14 +113,26 @@
           <h3>How it works</h3>
           <ul>
             <li>Browse categories using the sidebar.</li>
-            <li>Search by tags or titles in the sidebar search box.</li>
-            <li>Click on a tag to view all items with that tag.</li>
-            <li>Download files using the download button on each card.</li>
+            <li>Search by tags or titles in the sidebar search box. You can also click on a tag to view all items with that tag.</li>
+            <li>Download files using the download button on each card. Downloads will be in PDF format.</li>
           </ul>
+
+          <h3> File Prefix</h3>
+          
+          Most items here will not have a file prefix if they are an article or scan of a document. For some files, however, you may see the below prefix:
+          <ul class="list-unstyled">
+    <li>BIB: A bibliography of book and article titles on a single subject.</li>
+    <li>FAQ:   An article file that follows a Frequently Asked Questions format. </li>
+    <li>LINK: An article file that contains a list of web links, frequently annotated with comments.</li>
+          </ul>
+
           <h3>Submit an article</h3>
           <p>
             To submit an article, please <a href="mailto:ren.swiftwater@gmail.com">email your text submission directly</a>, either in doc/docx or pdf format. Include your name and any SCA kingdom or baronial affiliation.
           </p>
+
+          
+
                </div>
       </main>
     </div>
