--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Stefan li Rous Memorial Florilegium</title>
+    <title>Memorial Florilegium</title>
     <link
   href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
   rel="stylesheet"
@@ -102,13 +102,20 @@
         <div id="contentArea">
           <h2>Welcome</h2>
           <p>
-            This Florilegium was meticulously assembled by The Honorable Lord Stefan li
-            Rous (Mark S. Harris)who passed away before I ever had the chance to
+            This Florilegium was initially assembled by The Honorable Lord Stefan li
+            Rous (Mark S. Harris) who passed away before I ever had the chance to
             discover it. After learning about his work, I felt inspired to carry
             it forward — honouring his vision by maintaining and curating the
             original articles, while also contributing new ones to continue and
             expand his legacy.
           </p>
+
+          <p>What's a `Florilegium'? Literally, it means "a gathering of flowers". Florilegia were collections of choice tidbits (from Ovid, Aristotle, various popes, church scholars, etc) arranged topically.
+
+ Typically, a florilegium is huge, encyclopedic, and contains only choice selections from particular works. Example, Ovid's Metamorphoseswould be too long to include in its entirety and might suggest some ofthe wrong ideas (from a Church viewpoint), so only those works that offerclear exegetic or moralistic exempla would likely be included. Thus, a florilegium would probably *not* include Nestor's account of the battle of the Lapiths -- the tale pokes fun at Nestor, at old men attempting to claim wisdom solely based upon age, and (less directly) at Homer. A florilegium probably *would* contain the tales of Midas, however, because they provide lessons on the evils of greed, pride, and gossip.
+ </p>
+
+<p>I hope you find these files useful, interesting, amusing or all three.</p>
         </br>
           <h3>How it works</h3>
           <ul>
