Fixed darkmode on a few pages, updated ireland

--- a/about-stefan.html
+++ b/about-stefan.html
@@ -121,4 +121,20 @@ Mark was fairly adventurous about food, although he couldn’t remember a green 
       </main>
     </div>
   </body>
+  <script>
+  const modeToggle = document.getElementById('modeToggle');
+  modeToggle.addEventListener('click', () => {
+    document.documentElement.classList.toggle('dark-mode');
+    const isDark = document.documentElement.classList.contains('dark-mode');
+    modeToggle.textContent = isDark ? '☀️' : '🌙';
+    localStorage.setItem('darkMode', isDark ? 'enabled' : 'disabled');
+  });
+
+  // Preserve mode preference between pages
+  if (localStorage.getItem('darkMode') === 'enabled') {
+    document.documentElement.classList.add('dark-mode');
+    modeToggle.textContent = '☀️';
+  }
+</script>
+
 </html>
