--- a/category-food-by-region.html
+++ b/category-food-by-region.html
@@ -164,7 +164,8 @@
         <div class="letter-section" id="I">
           <h2>I</h2>
           <ul>
-            <li><a href="https://stefan-florilegium-files.s3.us-east-1.amazonaws.com/Food/Lawyers%2C+Legends+and+Landfills_+Early+Irish+Food.pdf">Ireland</a></li>
+            <li><a href="https://stefan-florilegium-files.s3.us-east-1.amazonaws.com/Food/Lawyers%2C+Legends+and+Landfills_+Early+Irish+Food.pdf">Lawyers, Legends and Landfills: Early Irish Food
+            </a></li>
             <li><a href="#">Cantaloupe</a></li>
           </ul>
         </div>
