Added Africa to food by region

--- a/category-food-by-region.html
+++ b/category-food-by-region.html
@@ -142,7 +142,7 @@
                 >Arab: In a Caliph's Kitchen (out of Print)
               </a>
             </li>
-            <li><a href="#">Avocado</a></li>
+            <li><a href="https://stefan-florilegium-files.s3.us-east-1.amazonaws.com/Food/MSG-+Africa.pdf">MSG - Africa</a></li>
           </ul>
         </div>
 
