--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
     <li>BIB: A bibliography of book and article titles on a single subject.</li>
     <li>FAQ:   An article file that follows a Frequently Asked Questions format. </li>
     <li>LINK: An article file that contains a list of web links, frequently annotated with comments.</li>
+    <li>MSG: usually originating from an email list back and forth, or messages copied from a discord/facebook/thread.</li>
           </ul>
 
           <h3>Submit an article</h3>
