--- a/category-food-by-region.html
+++ b/category-food-by-region.html
@@ -143,6 +143,7 @@
               </a>
             </li>
             <li><a href="https://stefan-florilegium-files.s3.us-east-1.amazonaws.com/Food/MSG-+Africa.pdf">MSG - Africa</a></li>
+            <li> <a href="https://stefan-florilegium-files.s3.us-east-1.amazonaws.com/Food/MSG-+Anglo-Saxon+England.pdf"> MSG - Anglo-Saxon England</a></li>
           </ul>
         </div>
 
@@ -171,7 +172,7 @@
         <div class="letter-section" id="E">
           <h2>E</h2>
           <ul>
-            <li><a href="#">E</a></li>
+             <li> <a href="https://stefan-florilegium-files.s3.us-east-1.amazonaws.com/Food/MSG-+Anglo-Saxon+England.pdf"> MSG - Anglo-Saxon England</a></li>
             <li><a href="#">E</a></li>
           </ul>
         </div>
